2009-09-09  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpVersion.cmake: freeze YARP version 2.2.4. Acknowledge
	committers found in svn logs that don't have ChangeLog entries:
	Giorgio Metta, Ugo Pattacini, Francesco Nori

2009-09-08  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/swig/yarp.i: enable callbacks for "BottleCallback" 
	(yarp::os::TypedReaderCallback<yarp::os::Bottle>) class in python.

2009-09-02  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/yarpserver/src/TripleSourceCreator.cpp: make caution level
	for database flushes an option.

	* src/yarpserver/CMakeLists.txt: add install target for
	library associated with new name server (thanks Alexis
	Maldonado)

	* src/libYARP_OS/src/Module.cpp: change getName() to avoid an
	extra "/" character being inserted if new ROBOTCUB naming
	guidelines are followed.

	* src/libYARP_OS/src/RFModule.cpp: change getName() to avoid an
	extra "/" character being inserted if new ROBOTCUB naming
	guidelines are followed (thanks David Vernon).

2009-08-28  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/NameConfig.cpp: tweaked setNameServerName
	to remove another source of cached namespaces

	* src/CMakeLists.txt: add option to compile new yarp server
	version to the global build.  To use the new yarp server,
	turn on the "CREATE_YARPSERVER3" flag during configuration,
	and run it as "yarpserver3".  The current yarp server is 
	still compiled and is still available as "yarp server" or
	"yarpserver"

	* src/libYARP_OS/include/yarp/os/impl/StringOutputStream.h: fix
	inefficient append operation.

	* src/libYARP_OS/include/yarp/os/impl/BufferedConnectionWriter.h: 
	add an optimization for messages with lots of small parts.

	* example/swig/CMakeLists.txt: fix directory creation for Java
	wrappers (thanks to Jonas Ruesch)

	* src/libYARP_OS/src/Bottle.cpp: make Bottle copies much, much
	faster.

	* example/profiling/bottle_test.cpp: do some profiling on 
	Bottles.
